# cmake

t3/lib_hello/: CMakeLists.txt
t4/src/: CMakeLists.txt  main.cpp
